--- a/src/main/web/user/index.html
+++ b/src/main/web/user/index.html
@@ -103,7 +103,7 @@
                             <li><a class="J_menuItem" href="datagrid.html">用户管理</a></li>
                             <li><a class="J_menuItem" href="datagridComm.html">商品管理</a></li>
                             <li><a class="J_menuItem" href="datagridOrder.html">订单管理</a></li>
-
+                            <li><a class="J_menuItem" href="FileUpload.html">文件上传</a></li>
                             <li><a class="J_menuItem" href="form_basic.html">基本表单</a>
                             </li>
                             <li><a class="J_menuItem" href="form_validate.html">表单验证</a>
