--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -460,8 +460,10 @@
                         <a href="kon.html"><img src="img/h4.jpg"></a>
                         <a href="kon.html">防晒伞</a></li>
                     <li>
-                        <a href="kon.html"><img src="img/h5.jpg"></a>
-                        <a href="kon.html">矿泉水</a></li>
+                        <a href="kon.html"><img src="img/h6.jpg"></a>
+                        <a href="kon.html">打火机</a></li>
+
+                    <li>
                 </ul>
                 <ul class="banner_menu_content_ul">
                     <li>
@@ -568,10 +570,10 @@
                         <a href="kon.html"><img src="img/fen.jpg"></a>
                         <a href="kon.html">粉底</a></li>
                     <li>
-                        <a href="kon.html"><img src="img/眼影0.jpg"></a>
+                        <a href="kon.html"><img src="img/yanyin.jpg"></a>
                         <a href="kon.html">眼影</a></li>
                     <li>
-                        <a href="kon.html"><img src="img/u洗面奶0.jpg"></a>
+                        <a href="kon.html"><img src="img/uximiannai0.jpg"></a>
                         <a href="kon.html">洗面奶</a></li>
                 </ul>
                 <ul class="banner_menu_content_ul">
@@ -582,27 +584,27 @@
                         <a href="kon.html"><img src="img/fei.jpg"></a>
                         <a href="kon.html">香皂</a></li>
                     <li>
-                        <a href="kon.html"><img src="img/睫毛膏p=0.jpg"></a>
+                        <a href="kon.html"><img src="img/jiemaogaop=0.jpg"></a>
                         <a href="kon.html">睫毛膏</a></li>
                     <li>
                         <a href="kon.html"><img src="img/hong.jpg"></a>
                         <a href="kon.html">口红</a></li>
                     <li>
-                        <a href="kon.html"><img src="img/唇膏0.jpg"></a>
+                        <a href="kon.html"><img src="img/cungao0.jpg"></a>
                         <a href="kon.html">唇膏</a></li>
                     <li>
-                        <a href="kon.html"><img src="img/u=防晒霜23&gp=0.jpg"></a>
+                        <a href="kon.html"><img src="img/u=fangshai23&gp=0.jpg"></a>
                         <a href="kon.html">防晒霜</a></li>
                 </ul>
                 <ul class="banner_menu_content_ul">
                     <li>
-                        <a href="kon.html"><img src="img/补水p=0.jpg"></a>
+                        <a href="kon.html"><img src="img/bushui.jpg"></a>
                         <a href="kon.html">补水喷雾</a></li>
                     <li>
-                        <a href="kon.html"><img src="img/化妆笔fm=23&gp=0.jpg"></a>
+                        <a href="kon.html"><img src="img/huazhuang0.jpg"></a>
                         <a href="kon.html">化妆笔</a></li>
                     <li>
-                        <a href="kon.html"><img src="img/底妆.jpg"></a>
+                        <a href="kon.html"><img src="img/dizhuang.jpg"></a>
                         <a href="kon.html">底妆</a></li>
                     <li>
                         <a href="kon.html"><img src="img/mian.jpg"></a>
