--- a/src/main/web/login.html
+++ b/src/main/web/login.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/js/users.js">
     <link rel="stylesheet" href="/js/utils.js">
 </head>
-<body>
+<body ng-app="login" ng-controller="loginCtrl">
 <div class="head_box">
     <div id="head_wrap">
         <div id="head_nav">
@@ -42,32 +42,27 @@
                     </div>
                     <div class="input-box input-box1 onfocusstyle user-word">
                         <label for="loginname" class="icon-user"></label>
-                        <input type="text" name="username" id="loginname" value="" placeholder="用户名/手机号码" class="position-input" maxlength="20" datatype="*" autocomplete="off">
+                        <input type="text" name="username" id="loginname" ng-model="username" value="" placeholder="用户名/手机号码" class="position-input" maxlength="20" datatype="*" autocomplete="off">
                         <div class="Validform_checktip formtip">
                             <span class=""><i></i><label></label></span>
                         </div>
                     </div>
                     <div class="input-box onfocusstyle passw-word">
                         <label for="passw" class="icon-passw"></label>
-                        <input type="password" name="password" id="passw" value="" placeholder="密码" class="position-input" maxlength="20" datatype="*" autocomplete="off">
+                        <input type="password" name="password" id="passw" value="" ng-model="password" placeholder="密码" class="position-input" maxlength="20" datatype="*" autocomplete="off">
                         <div class="Validform_checktip formtip">
                             <span class=""><i></i><label></label></span>
                         </div>
                     </div>
-                    <div class="input-box onfocusstyle yanm-div" style="display: none;">
-                        <label for="authcode" class="icon-passw"></label>
-                        <input type="text" maxlength="4" name="authcode" id="authcode" value="" placeholder="验证码" class="position-input" nullmsg="请输入验证码！" datatype="*" onclick="showvode();">
-                        <img id="mx" style="cursor:pointer;" src="#" alt="看不清？点击更换另一个验证码" border="1" onclick="refreshimage(this)" title="看不清？点击更换另一个验证码">
-                        <div class="Validform_checktip formtip">
-                            <span class=""><i></i><label></label></span>
-                        </div>
-                    </div>
+
+
                     <div class="check">
-                        <span class="mh-checkbox checkbox-stylemh"><input type="checkbox" id="autologin" value="1" class="zdlogin-btn" checked="checked"></span>&nbsp;&nbsp;&nbsp;&nbsp;<label for="autologin">自动登录</label>
+                        <span class="mh-checkbox checkbox-stylemh"><input type="checkbox" id="autologin" value="1" class="zdlogin-btn" checked="checked"></span>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<label for="autologin"></label>
                         <a href="" target="_blank">忘记密码？</a>
                     </div>
                     <div class="input-box sub-box">
-                        <input type="button" id="login" value="登录">
+                        <input type="submit"  ng-click="loginFrom()" id="login" value="登录">
                     </div>
                 </form>
                 <div class="hezuo oauth">
@@ -143,5 +138,38 @@
 <script src="/js/users.js" type="text/javascript"></script>
 <script src="/js/layer.min.js"></script>
 <script src="/js/layer.min.js"></script>
+<script src="/js/angular/angular.min.js" type="text/javascript"></script>
+
+
+<script>
+    var app = angular.module('login', []);
+
+    app.controller('loginCtrl', function($scope,$http) {
+        $scope.username = "";
+        $scope.password="";
+        $scope.loginFrom = function() {
+            var username=$scope.username;
+            var password=$scope.password;
+            var parme={'username':username,'password':password};
+
+
+            $http({
+                method:'POST',
+               /* url:'/comm/addComm',*/
+                data:parme,
+                dataType:'json',
+            }).success(function(data, status, headers, config){
+                alert("success");
+            }).error(function(data, status, headers, config){
+                alert("error");
+            })
+        }
+    });
+
+
+
+
+</script>
+
 </body>
 </html>
