--- a/src/main/web/user/addComm.html
+++ b/src/main/web/user/addComm.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../scripts/jquery-1.6.2.min.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="favicon.ico"> <link href="/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
     <link href="/css/font-awesome.css?v=4.4.0" rel="stylesheet">
     <link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
     <link href="/css/animate.css" rel="stylesheet">
     <link href="/css/style.css?v=4.1.0" rel="stylesheet">
-    <script src="../scripts/jquery-1.6.2.min.js" type="text/javascript"></script>
+
     <script src="../scripts/ajaxfileupload.js"></script>
+
+
 </head>
 <body ng-app="myApp" ng-controller="CommodityController" >
  <div class="row">
@@ -60,25 +63,22 @@
                         </div>
                     </div>
 
-              <!--  <form name="form5"  method="post" enctype="multipart/form-data">
-                    <input type="file" id="file_AjaxFile" name="file_AjaxFile">
-                    <input type="button" value="upload" onclick="fileUploadAjax()"/><span id="sp_AjaxFile"></span>
-
-                </form>-->
-                <div class="form-group" >
-                    <label class="col-sm-2 control-label">商品图片</label>
-                    <div  class="col-sm-10">
-                    <input type="file" file-model="myFile"  ng-model="picture">
-                    <button ng-click="save()" >上传</button>
-                    </div>
-                </div>
-                  <!-- <div class="form-group">
-                        <label class="col-sm-2 control-label">商品图片</label>
-
+                <div class="form-group">
+                            <label class="col-sm-2 control-label" for="file">商品图片</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="picture">
+                            <input type="file" id="file" class="form-control" ng-model="picture" accept="image/*" name="file" ><br/>
+                            <input type="hidden" id="flag" name="flag" value="{{uid}}" />
                         </div>
-                    </div>-->
+                        </div>
+                       <!-- <div class="span2">
+                            <img src="{{path+icon}}" width="40px" height="40px">
+                        </div>-->
+                        <div class="span1">
+                            <input type="button"  id="btnUpload" value="上传图片" />
+                        </div>
+
+
+                </div>
 
                     <div class="form-group">
                         <label class="col-sm-2 control-label">正常价格</label>
@@ -163,6 +163,7 @@
                                 <input type="text" class="form-control" ng-model="cdate">
                             </div>
                         </div>
+
                        <!-- <div class="form-group">
                             <label class="col-sm-2 control-label">商品创建时间：</label>
                             <div class="col-sm-10">
@@ -275,28 +276,41 @@
      };
      laydate(start);
      laydate(end);
+
  </script>
+
  <script type="text/javascript">
-     function fileUploadAjax() {
-         if ($("#file_AjaxFile").val().length > 0) {
-             $.ajaxFileUpload({
-                 url: '/FileUpload/fileUpload_ajax', //用于文件上传的服务器端请求地址
-                 type: "post",
-                 secureuri: false, //一般设置为false
-                 fileElementId: 'file_AjaxFile',
-                 dataType: 'application/json', //返回值类型 一般设置为json
-                 success: function (data)  //服务器成功响应处理函数
-                 {
-                     alert("成功!");
-                 }
-
-             });
-         }
-         else {
-             alert("请选择文件!");
-         }
+     $(function(){
+         //上传图片
+         $("#btnUpload").click(function() {
+             ajaxFileUpload();
+         });
+     });
+     function ajaxFileUpload() {
+         // 开始上传文件时显示一个图片
+         //  $("#wait_loading").ajaxStart(function() {
+         //  $(this).show();
+         // 文件上传完成将图片隐藏起来
+         // }).ajaxComplete(function() {
+         //  $(this).hide();
+         // });
+         var uid =$('#flag').val()
+         $.ajaxFileUpload({
+             url: '/comm/updateIcon',
+             type: 'post',
+             secureuri: false, //一般设置为false
+             fileElementId: 'file', // 上传文件的id、name属性名
+             dataType: 'text', //返回值类型，一般设置为json、application/json
+             data:{'id':uid},
+             success: function(data, status){
+                 alert(data);
+             },
+             error: function(data, status, e){
+                 alert(e);
+             }
+         });
+         //return false;
      }
-
  </script>
 </body>
 </html>
