--- a/src/main/web/user/addComm.html
+++ b/src/main/web/user/addComm.html
@@ -11,11 +11,9 @@
     <link href="/css/style.css?v=4.1.0" rel="stylesheet">
 
     <script src="../scripts/ajaxfileupload.js"></script>
-
-
 </head>
 <body ng-app="myApp" ng-controller="CommodityController" >
- <div class="row">
+<div class="row">
     <div class="col-sm-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
@@ -40,277 +38,224 @@
             </div>
             <div class="ibox-content">
 
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品编号</label>
-
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="c_id">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品名称</label>
-
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="c_name">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品品牌</label>
-
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="brand">
-                        </div>
-                    </div>
-
                 <div class="form-group">
-                            <label class="col-sm-2 control-label" for="file">商品图片</label>
-                        <div class="col-sm-10">
-                            <input type="file" id="file" class="form-control" ng-model="picture" accept="image/*" name="file" ><br/>
-                            <input type="hidden" id="flag" name="flag" value="{{uid}}" />
-                        </div>
-                        </div>
-                       <!-- <div class="span2">
-                            <img src="{{path+icon}}" width="40px" height="40px">
-                        </div>-->
-                        <div class="span1">
-                            <input type="button"  id="btnUpload" value="上传图片" />
-                        </div>
+                    <label class="col-sm-2 control-label">商品编号</label>
 
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" ng-model="c_id">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">商品名称</label>
 
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" ng-model="c_name">
+                    </div>
                 </div>
 
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">正常价格</label>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">商品品牌</label>
 
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="normal_price">
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" ng-model="brand">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">正常价格</label>
+
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" ng-model="normal_price">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">零售价格</label>
+
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" ng-model="retail_price">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">商品状态
+                    </label>
+                    <div class="col-sm-10">
+                        <div class="radio">
+                            <label>
+                                <input type="radio" checked="" value="1" ng-model="c_state" id="optionsRadios1" name="optionsRadios">选项1</label>
+                                <label><input type="radio" value="2" id="optionsRadios2" name="optionsRadios" ng-model="c_state" >选项2</label>
                         </div>
+
                     </div>
 
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">零售价格</label>
-
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="retail_price">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品状态
-                        </label>
-                        <div class="col-sm-10">
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" checked="" value="1" ng-model="c_state" id="optionsRadios1" name="optionsRadios">选项1</label>
-                                    <input type="radio" value="2" id="optionsRadios2" name="optionsRadios" ng-model="c_state" >选项2</label>
-                            </div>
-
-                        </div>
-
-                        <div class="hr-line-dashed"></div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">商品介绍</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control"> <span class="help-block m-b-none" ng-model="introduce"></span>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">商品属性</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="property">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">商品标签</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="label">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">商品库存</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="inventory">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">商品大类</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="broad_heading">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">商品子类别</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="subclass">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">商品创建时间</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="cdate">
-                            </div>
-                        </div>
-
-                       <!-- <div class="form-group">
-                            <label class="col-sm-2 control-label">商品创建时间：</label>
-                            <div class="col-sm-10">
-                                <input class="form-control layer-date" ng-model="cdate" placeholder="YYYY-MM-DD hh:mm:ss" onclick="laydate({istime: true, format: 'YYYY-MM-DD hh:mm:ss'})">
-                                <label class="laydate-icon"></label>
-                            </div>
-                        </div>-->
                     <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品介绍</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control"> <span class="help-block m-b-none" ng-model="introduce"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品属性</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="property">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品标签</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="label">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品库存</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="inventory">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品大类</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="broad_heading">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品子类别</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="subclass">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品创建时间</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="cdate">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品图片</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="pic" ng-model="picture">
+                            <form name="form5"  method="post" enctype="multipart/form-data">
+                                <p>  <input type="file" id="file_AjaxFile" name="file_AjaxFile">
+                                    <input type="button" value="上传图片"      ng-click="fileUploadAjax()"/><span id="sp_AjaxFile"></span></p>
+                            </form>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
                             <button class="btn btn-primary" type="submit" ng-click="submitFrom()">保存内容</button>
                             <button class="btn btn-white" type="submit">取消</button>
                         </div>
                     </div>
-
+                </div>
+            </div>
         </div>
     </div>
 </div>
-</div>
- </div>
 
- <script src="../js/angular/angular.min.js" type="text/javascript"></script>
- <script>
-     var app = angular.module('myApp', []);
-     app.controller('CommodityController', function($scope,$http) {
-         $scope.c_id = "";
-         $scope.c_name="";
-         $scope.brand="";
-         $scope.picture="";
-         $scope.normal_price="";
-         $scope.retail_price="";
-         $scope.c_state="";
-         $scope.introduce="";
-         $scope.property="";
-         $scope.label="";
-         $scope.inventory="";
-         $scope.broad_heading="";
-         $scope.subclass="";
-         $scope.cdate="";
-
-         $scope.submitFrom = function() {
-             var c_id=$scope.c_id;
-             var c_name=$scope.c_name;
-             var brand=$scope.brand;
-             var picture= $scope.picture;
-             var normal_price= $scope.normal_price;
-             var retail_price= $scope.retail_price;
-             var c_state= $scope.c_state;
-             var introduce= $scope.introduce;
-             var property= $scope.property;
-             var label= $scope.label;
-             var inventory= $scope.inventory;
-             var broad_heading= $scope.broad_heading;
-             var subclass= $scope.subclass;
-             var cdate= $scope.cdate;
-
-             var parme={'c_id':c_id,'c_name':c_name,'brand':brand,'picture':picture,
-                 'normal_price':normal_price,'retail_price':retail_price,'c_state':c_state,
-                 'introduce':introduce,'property':property,'label':label,'inventory':inventory,'broad_heading':broad_heading,
-                 'subclass':subclass,'cdate':cdate,
-             };
+<script src="../js/angular/angular.min.js" type="text/javascript"></script>
+<script>
+    var app = angular.module('myApp', []);
+    app.controller('CommodityController', function($scope,$http) {
+        $scope.c_id = "";
+        $scope.c_name="";
+        $scope.brand="";
+        $scope.picture="";
+        $scope.normal_price="";
+        $scope.retail_price="";
+        $scope.c_state="";
+        $scope.introduce="";
+        $scope.property="";
+        $scope.label="";
+        $scope.inventory="";
+        $scope.broad_heading="";
+        $scope.subclass="";
+        $scope.cdate="";
+        $scope.fileUploadAjax= function() {
+            if ($("#file_AjaxFile").val().length > 0) {
 
 
-             $http({
-                 method:'POST',
-                 url:'/comm/addComm',
-                 data:parme,
-                 dataType:'json',
-             }).success(function(data, status, headers, config){
-                 alert("添加成功！");
+                $.ajaxFileUpload({
+                    url: '/FileUpload/fileUpload_ajax', //用于文件上传的服务器端请求地址
+                    type: "post",
+                    secureuri: false, //一般设置为false
+                    fileElementId: 'file_AjaxFile',
+                    dataType: 'text', //返回值类型 一般设置为json
+                    success: function (data)  //服务器成功响应处理函数
+                    {          /**
+                     获得后台返回的地址 并添加到angular
+                     **/console.log(data)
+
+                        var j=eval(data);
+
+
+                        if (data.data!="fail"){
+                            $scope.picture= j;
+                            alert("成功!");
+                        }
+
+
+                    },error:function (res,err) {
+                        console.log(res)
+                        console.log(err)
+                    }
+
+                });
+            }
+            else {
+                alert("请选择文件!");
+            }
+        };
+        $scope.submitFrom = function() {
+            var c_id=$scope.c_id;
+            var c_name=$scope.c_name;
+            var brand=$scope.brand;
+            var picture= $scope.picture;
+            var normal_price= $scope.normal_price;
+            var retail_price= $scope.retail_price;
+            var c_state= $scope.c_state;
+            var introduce= $scope.introduce;
+            var property= $scope.property;
+            var label= $scope.label;
+            var inventory= $scope.inventory;
+            var broad_heading= $scope.broad_heading;
+            var subclass= $scope.subclass;
+            var cdate= $scope.cdate;
+            var parme={'c_id':c_id,'c_name':c_name,'brand':brand,'picture':picture,
+                'normal_price':normal_price,'retail_price':retail_price,'c_state':c_state,
+                'introduce':introduce,'property':property,'label':label,'inventory':inventory,'broad_heading':broad_heading,
+                'subclass':subclass,'cdate':cdate,
+            };
+            console.log("picture"+c_name)
+            console.log("picture"+picture)
+            $http({
+                method:'POST',
+                url:'/comm/addComm',
+                data:parme,
+                dataType:'json',
+            }).success(function(data, status, headers, config){
+                alert("添加成功！");
                 window.location="datagridComm.html"
-             }).error(function(data, status, headers, config){
-                 alert("error");
-             })
-         }
-     });
+            }).error(function(data, status, headers, config){
+                alert("error");
+            })
+        }
+    });
 
- </script>
- <script src="/js/plugins/layer/laydate/laydate.js"></script>
- <script>
-     //外部js调用
-     laydate({
-         elem: '#hello', //目标元素。由于laydate.js封装了一个轻量级的选择器引擎，因此elem还允许你传入class、tag但必须按照这种方式 '#id .class'
-         event: 'focus' //响应事件。如果没有传入event，则按照默认的click
-     });
+</script>
+<script type="text/javascript">
 
-     //日期范围限制
-     var start = {
-         elem: '#start',
-         format: 'YYYY/MM/DD hh:mm:ss',
-         min: laydate.now(), //设定最小日期为当前日期
-         max: '2099-06-16 23:59:59', //最大日期
-         istime: true,
-         istoday: false,
-         choose: function (datas) {
-             end.min = datas; //开始日选好后，重置结束日的最小日期
-             end.start = datas //将结束日的初始值设定为开始日
-         }
-     };
-     var end = {
-         elem: '#end',
-         format: 'YYYY/MM/DD hh:mm:ss',
-         min: laydate.now(),
-         max: '2099-06-16 23:59:59',
-         istime: true,
-         istoday: false,
-         choose: function (datas) {
-             start.max = datas; //结束日选好后，重置开始日的最大日期
-         }
-     };
-     laydate(start);
-     laydate(end);
-
- </script>
-
- <script type="text/javascript">
-     $(function(){
-         //上传图片
-         $("#btnUpload").click(function() {
-             ajaxFileUpload();
-         });
-     });
-     function ajaxFileUpload() {
-         // 开始上传文件时显示一个图片
-         //  $("#wait_loading").ajaxStart(function() {
-         //  $(this).show();
-         // 文件上传完成将图片隐藏起来
-         // }).ajaxComplete(function() {
-         //  $(this).hide();
-         // });
-         var uid =$('#flag').val()
-         $.ajaxFileUpload({
-             url: '/comm/updateIcon',
-             type: 'post',
-             secureuri: false, //一般设置为false
-             fileElementId: 'file', // 上传文件的id、name属性名
-             dataType: 'text', //返回值类型，一般设置为json、application/json
-             data:{'id':uid},
-             success: function(data, status){
-                 alert(data);
-             },
-             error: function(data, status, e){
-                 alert(e);
-             }
-         });
-         //return false;
-     }
- </script>
+</script>
 </body>
 </html>
