--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -490,67 +490,7 @@
 
             </div>
         </li>
-       <!-- <li>
-            <a>美食天地</a>
-            <a class="banner_menu_i">&gt;</a>
-            <div class="banner_menu_content" style="width: 900px; top: -230px;">
-                <ul class="banner_menu_content_ul">
-                    <li>
-                        <a href="kon.html"><img src="img/gou.jpg"></a>
-                        <a href="kon.html">枸杞</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/haidai.jpg"></a>
-                        <a href="kon.html">海带</a></li>
-                    <li>
-                        <a><img src="img/heidou.jpg"></a>
-                        <a>黑豆</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/hong.jpg"></a>
-                        <a href="kon.html">红豆</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/huajpg.jpg"></a>
-                        <a href="kon.html">花生</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/lv.jpg"></a>
-                        <a href="kon.html">绿豆</a></li>
-                </ul>
-                <ul class="banner_menu_content_ul">
-                    <li>
-                        <a href="kon.html"><img src="img/muer.jpg"></a>
-                        <a href="kon.html">木耳</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/sha.jpg"></a>
-                        <a href="kon.html">沙参</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/u=602735162,1663401670&fm=23&gp=0.jpg"></a>
-                        <a href="kon.html">大米</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/xiaomi.jpg"></a>
-                        <a href="kon.html">小米</a></li>
 
-                    <li>
-                        <a href="kon.html"><img src="img/yu.jpg"></a>
-                        <a href="kon.html">玉米</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/大豆.jpg"></a>
-                        <a href="kon.html">大豆</a></li>
-
-                </ul>
-                <ul class="banner_menu_content_ul">
-                    <li>
-                        <a href="kon.html"><img src="img/yu.jpg"></a>
-                        <a href="kon.html">玉米</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/花椒.jpg"></a>
-                        <a href="kon.html">花椒</a></li>
-                    <li>
-                        <a href="kon.html"><img src="img/lajiaoo.jpg"></a>
-                        <a href="kon.html">辣椒</a></li>
-
-
-                </ul>
-            </div>
-        </li>-->
         <li>
             <a>美妆个护</a>
             <a class="banner_menu_i">&gt;</a>
@@ -740,11 +680,12 @@
 
     <div id="big_banner_pic_wrap">
         <ul id="big_banner_pic">
-            <li><img src="img/001.jpg"></li>
-            <li><img src="img/002.jpg"></li>
             <li><img src="img/003.png"></li>
             <li><img src="img/004.png"></li>
             <li><img src="img/005.jpg"></li>
+            <li><img src="img/001.jpg"></li>
+            <li><img src="img/002.jpg"></li>0000000
+
         </ul>
     </div>
     <div id="big_banner_change_wrap">
@@ -786,7 +727,7 @@
             <li>
                 <a href="Acer5.html"> <img src="img/Acer4.jpg"></a>
                 <a>Acer/宏碁E3-112C3XN四核</a>
-                <a>笔记本11英寸彩色办公本</a>
+                <a>笔记彩色办公本</a>
             </li>
             <li>
                 <a  href="P.html"><img src="img/P.jpg"></a>
@@ -794,17 +735,17 @@
                 <a>经典款式旗舰版</a>
             </li>
             <li>
-                <a  href="P1.html"> <img src="img/P1.jpg"></a>
+                <a  href="P1.html"> <img src="img/p1.jpg"></a>
                 <a>iPad air 苹果超薄电脑</a>
                 <a>ipad air轻出分量</a>
             </li>
             <li>
-                <a href="P2.html"><img src="img/P2.jpg"></a>
+                <a href="P2.html"><img src="img/p2.jpg"></a>
                 <a>ipad air 2 平板 电脑 wlan版</a>
                 <a>经典款式金色</a>
             </li>
             <li>
-                <a href="P3.html"><img src="img/P3.jpg"></a>
+                <a href="P3.html"><img src="img/p3.jpg"></a>
                 <a>联想超薄笔记本</a>
                 <a>14寸精英版</a>
             </li>
