--- a/src/main/web/Acer3.html
+++ b/src/main/web/Acer3.html
@@ -53,7 +53,7 @@
 								</div>
 							</div>
 							<div class="fish-detail">
-								<h3>Acer/宏碁 F5 572G坚刃版 六代i5 GT940M超薄学生笔记本15.6英寸</h3>
+								<h3>Acer/宏碁 V 13 V3-574G-5326i5/GT940M独显2G游戏本8Gw8</h3>
 								<p></p>
 								<div class="price">
 									<div>市场价：<s>￥6099.00</s></div>
@@ -68,7 +68,8 @@
 									<span class="spec-name">尺寸</span>：<span class="select-mod"><a href="javascript:void(0);" id="4寸">14寸<i class="icon-check-zf"></i></a>	<a href="javascript:void(0);" id="5寸">15寸<i class="icon-check-zf"></i></a>	<a href="javascript:void(0);" id="6寸">16寸<i class="icon-check-zf"></i></a>	</span>
 								</div>
 								<div class="it">
-									<span class="spec-name">颜色</span>：<span class="select-mod"><a href="javascript:void(0);" id="白色">黑色<i class="icon-check-zf"></i></a>	<a href="javascript:void(0);" id="黑色">黑色<i class="icon-check-zf"></i></a>	</span>
+									<span class="spec-name">颜色</span>：<span class="select-mod"><a href="javascript:void(0);" id="白色">白色
+									<i class="icon-check-zf"></i></a>	<a href="javascript:void(0);" id="黑色">黑色<i class="icon-check-zf"></i></a>	</span>
 								</div>
 							</div>
 							<div class="pro-number">
@@ -90,12 +91,12 @@
 							<div class="tempWrap" style="overflow:hidden; position:relative; height:420px">
 								<ul style="top: 0px; position: relative; padding: 0px; margin: 0px;">
 									<li style="height: 200px;">
-										<a href="P3.html" target="_blank">联想超薄笔记本14寸精英版<img src="img/P3.jpg" alt=""></a>
+										<a href="P3.html" target="_blank">联想超薄笔记本14寸精英版<img src="img/p3.jpg" alt=""></a>
 										<p>
 											<a href="" target="_blank"></a><span>￥6099.00</span></p>
 									</li>
 									<li style="height: 200px;">
-										<a href="Acer4.html" target="_blank">Acer/宏碁超薄学生笔记本15.6英寸<img src="img/26_P_1460577901395.jpg" alt=""></a>
+										<a href="Acer4.html" target="_blank">Acer/宏碁超薄学生笔记本14英寸<img src="img/26_P_1460577901395.jpg" alt=""></a>
 										<p>
 											<a href="#" target="_blank"></a><span>￥5099.00</span></p>
 									</li>
@@ -196,8 +197,7 @@
 									</li>
 									<li>
 										<p>本产品全国联保，享受三包服务，质保期为：一年质保（已激活的iPhone无质量问题不支持7天无理由退换货）<br>如因质量问题或故障，凭厂商维修中心或特约维修点的质量检测证明，享受7日内退货，15日内换货，15日以上在质保期内享受免费保修等三包服务！<br>(注:如厂家在商品介绍中有售后保障的说明,则此商品按照厂家说明执行售后保障服务。) 您可以查询本品牌在各地售后服务中心的联系方式，
-											<a target="_blank" href="http://www.apple.com/cn/" style="margin: 0px; padding: 0px; color: rgb(0, 90, 160); text-decoration: none;">请点击这儿查询......</a><br><br>品牌官方网站：
-											<a target="_blank" href="http://www.apple.com/cn/" style="margin: 0px; padding: 0px; color: rgb(0, 90, 160); text-decoration: none;">http://www.apple.com/cn/</a><br>售后服务电话：400-666-8800</p>
+
 									</li>
 									<li>
 										<p><strong style="margin: 0px; padding: 8px 0px 3px; display: inline-block;">承诺</strong></p>
