--- a/src/main/web/register.html
+++ b/src/main/web/register.html
@@ -38,14 +38,14 @@
                 <form action="" method="post">
                     <div class="input-box input-box1 onfocusstyle user-word">
                         <label for="username" class="icon-user"></label>
-                        <input type="text" name="username" id="username"  ng-model="username" value="" placeholder="用户名" maxlength="20" autocomplete="off">
+                        <input type="text" name="username" id="username"  ng-model="username"  placeholder="用户名" maxlength="20" required="required"   autocomplete="off">
                         <div class="Validform_checktip formtip">
                             <span class="i-tip"><i></i><label>支持中文、字母、数字、“-”“_”的组合</label></span>
                         </div>
                     </div>
                     <div class="input-box onfocusstyle position-input p-w">
                         <label class="icon-phone" for="mobile"></label>
-                        <input type="text" id="mobile" value="" placeholder="手机号码" ng-model="mobile" maxlength="11" autocomplete="off">
+                        <input type="text" id="mobile" value="" placeholder="手机号码" ng-model="mobile" maxlength="11" autocomplete="off" required="required">
                         <div class="Validform_checktip formtip">
                             <span class=""><i></i><label></label></span>
                         </div>
@@ -54,21 +54,21 @@
 
                     <div class="input-box onfocusstyle  pass-w">
                         <label class="icon-setpassw" for="password"></label>
-                        <input type="password" name="password" id="password" ng-model="password" value="" placeholder="请输入密码" maxlength="20" min="8" autocomplete="off">
+                        <input type="password" name="password"   id="password" ng-model="password"  placeholder="请输入密码"   required="required"  maxlength="20" min="8" autocomplete="off">
                         <div class="Validform_checktip formtip">
                             <span class="i-tip"><i></i><label>建议使用字母、数字和符号两种及以上的组合，6-20个字符</label></span>
                         </div>
                     </div>
                     <div class="input-box onfocusstyle position-input  pass-w2">
                         <label class="icon-setpassw" for="repassword"></label>
-                        <input type="password" name="repassword" id="repassword" ng-model="repassword" value="" placeholder="请再次输入密码" maxlength="20">
+                        <input type="password" name="repassword"  id="repassword" ng-model="repassword" required="required"   placeholder="请再次输入密码" maxlength="20">
                         <div class="Validform_checktip formtip">
                             <span class=""><i></i><label></label></span>
                         </div>
                     </div>
 
                     <div class="input-box sub-box">
-                        <input type="button" id="reg" ng-click="submitFrom()" value="注册">
+                        <input type="submit" id="reg" ng-click="submitFrom()" value="注册">
                     </div>
                 </form>
             </div>
@@ -142,14 +142,14 @@
         </div>
     </div>
 </div>
-
+</div>
 <script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
 <script src="/js/main.js" type="text/javascript"></script>
 <script src="/js/layer.min.js"></script>
     <script src="/js/angular/angular.min.js" type="text/javascript"></script>
 
 
-    <script>
+    <script type="text/javascript">
         var app = angular.module('register', []);
 
         app.controller('registerCtrl', function($scope,$http) {
@@ -164,25 +164,26 @@
                 var repassword= $scope.repassword;
                 var parme={'username':username,'mobile':mobile,'password':password,'repassword':repassword};
 
-
                 $http({
                         method:'POST',
-                        url:'/comm/addComm',
+                        url:'/user/addUser',
                         data:parme,
                         dataType:'json',
                 }).success(function(data, status, headers, config){
-                    alert("success");
+                 /*   alert("注册成功啦,去登录咯！")
+                    window.location="login.html"*/
+
                 }).error(function(data, status, headers, config){
-                    alert("error");
+                    alert("注册失败！");
+
+                    
+
                 })
             }
         });
 
 
-
-
     </script>
 
-</div>
 </body>
 </html>
