--- a/src/main/web/Acer1.html
+++ b/src/main/web/Acer1.html
@@ -53,7 +53,7 @@
 								</div>
 							</div>
 							<div class="fish-detail">
-								<h3>Acer/宏碁 Aspire F15F5-572G-52MQ-54ZZ六代I5高清游戏本</h3>
+								<h3>Acer/宏碁 F5 572G超薄学生笔记本15英寸</h3>
 								<p></p>
 								<div class="price">
 									<div>市场价：<s>￥6099.00</s></div>
