--- a/src/main/web/Acer.html
+++ b/src/main/web/Acer.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="css/layer.css" id="layui_layer_skinlayercss">
 </head>
 
-<body>
+<body ng-app="myAppXQ" ng-controller="CommodityCo">
 
 
 
@@ -29,10 +29,11 @@
 			<div class="pview-left">
 				<div class="ovclear">
 					<div class="slide-fish">
-						<div class="t2">
-							<a href="img/ACRe1.jpg" id="bigimg" class="MagicZoom MagicThumb" style="position: relative; display: block; outline: 0px; text-decoration: none; width: 410px;"><img src="img/ACRe1.jpg" id="sim145606" class="main_img" style="width:410px;height: 410px;">
+						<div class="t2"  ng-repeat="(x, value) in myObj">
+							<a href="{{value.picture}}" id="bigimg" class="MagicZoom MagicThumb" style="position: relative; display: block; outline: 0px; text-decoration: none; width: 410px;">
+								<img src="{{value.picture}}" id="sim145606" class="main_img" style="width:410px;height: 410px;">
 								<div id="bc145606" class="MagicZoomBigImageCont" style="width: 300px; height: 300px; left: -10000px; top: 0px; overflow: hidden; z-index: 100; visibility: hidden; position: absolute; display: block;">
-									<div style="overflow: hidden;"><img src="img/ACRe1.jpg" style="position: relative; left: -499.512px; top: -499.512px; display: block; visibility: visible;"></div>
+									<div style="overflow: hidden;"><img src="{{value.picture}}" style="position: relative; left: -499.512px; top: -499.512px; display: block; visibility: visible;"></div>
 								</div>
 								<div class="MagicZoomPup" style="z-index: 10; visibility: hidden; position: absolute; opacity: 0.5; width: 153.75px; height: 153.75px; left: 256.25px; top: 256.25px;"></div>
 							</a>
@@ -42,11 +43,9 @@
 							<a class="next" href="javascript:void(0);"></a>
 							<div class="bd">
 								<ul class="smallImg" id="imglist">
-									<li class="on">
-										<a rel="bigimg" rev="img/img/ACRE.jpg"><img src="img/ACRE.jpg"></a>
+									<li class="on" ng-repeat="(x, value) in myObj">
+										<a rel="bigimg" rev="img/img/ACRE.jpg"><img src="{{value.picture}}"></a>
 									</li>
-
-
 
 								</ul>
 							</div>
@@ -279,6 +278,22 @@
 <script src="js/jquery.SuperSlide.2.1.1.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 <script src="js/layer.min.js"></script>
+<script src="/js/angular/angular.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+
+    var app = angular.module('myAppXQ', []);
+    app.controller('CommodityCo', function($scope,$http) {
+        $http({
+
+            method: 'POST',
+            url: '/comm/findById',
+
+		}).success(function(data) {
+
+
+        });
+    })
+</script>
 </body>
 
 </html>
