--- a/src/main/web/register.html
+++ b/src/main/web/register.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>注册用户</title>
-    <link  rel="stylesheet"   href="/css/logincss.css">
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/loginregister.css">
-    <link rel="stylesheet" href="/css/valifrom.css">
 
-   <link rel="stylesheet" href="/css/layer.css" id="layui_layer_skinlayercss"></head>
-<link rel="stylesheet" href="/js/users.js">
-<link rel="stylesheet" href="/js/utils.js">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/loginregister.css">
+    <link rel="stylesheet" href="css/valifrom.css">
+    <link  rel="stylesheet"   href="/css/login.css">
+    <link  rel="stylesheet"   href="/css/logincss.css">
+    <style>
+        .form-box .input-box {
+            overflow: visible;
+        }
+    </style>
+    <link rel="stylesheet" href="css/layer.css" id="layui_layer_skinlayercss">
 
 </head>
 <body ng-app="register" ng-controller="registerCtrl">
@@ -35,7 +41,7 @@
     <div class="ny-body ny-register">
         <div class="left">
             <div class="form-box">
-                <form action="" method="post">
+                <form action="" method="post" >
                     <div class="input-box input-box1 onfocusstyle user-word">
                         <label for="username" class="icon-user"></label>
                         <input type="text" name="username" id="username"  ng-model="username"  placeholder="用户名" maxlength="20" required="required"   autocomplete="off">
@@ -68,7 +74,7 @@
                     </div>
 
                     <div class="input-box sub-box">
-                        <input type="submit" id="reg" ng-click="submitFrom()" value="注册">
+                        <input  type="submit" id="reg" ng-click="submitFrom()" value="注册">
                     </div>
                 </form>
             </div>
@@ -142,44 +148,56 @@
         </div>
     </div>
 </div>
-</div>
-<script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script src="/js/main.js" type="text/javascript"></script>
-<script src="/js/layer.min.js"></script>
+
+    <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/users.js" type="text/javascript"></script>
+    <script src="js/layer.min.js"></script>
     <script src="/js/angular/angular.min.js" type="text/javascript"></script>
-
-
     <script type="text/javascript">
-        var app = angular.module('register', []);
 
-        app.controller('registerCtrl', function($scope,$http) {
-            $scope.username = "";
-            $scope.mobile="";
-            $scope.password="";
-            $scope.repassword="";
-            $scope.submitFrom = function() {
-                var username=$scope.username;
-                var mobile=$scope.mobile;
-                var password=$scope.password;
-                var repassword= $scope.repassword;
-                var parme={'username':username,'mobile':mobile,'password':password,'repassword':repassword};
+     var app = angular.module('register', []);
+        app.controller('registerCtrl', function ($scope, $http) {
+                    $scope.username = "";
+                    $scope.mobile = "";
+                    $scope.password = "";
+                    $scope.repassword = "";
+                    $scope.submitFrom = function () {
+                        var username = $scope.username;
+                        var mobile = $scope.mobile;
+                        var password = $scope.password;
+                        var repassword = $scope.repassword;
+                        var parme = {
+                            'username': username,
+                            'mobile': mobile,
+                            'password': password,
+                            'repassword': repassword
+                        };
+                        $http({
+                            method: 'POST',
+                            url: '/user/addUser',
+                            data: parme,
+                            dataType: 'json',
 
-                $http({
-                        method:'POST',
-                        url:'/user/addUser',
-                        data:parme,
-                        dataType:'json',
-                }).success(function(data, status, headers, config){
-                 /*   alert("注册成功啦,去登录咯！")
-                    window.location="login.html"*/
+                        }).success(function (data, status, headers, config) {
+                            alert("注册成功！");
 
-                }).error(function(data, status, headers, config){
-                    alert("注册失败！");
+                            window.location = "login.html";
 
-                })
-            }
-        });
+                        }).error(function (data, status, headers, config) {
+                            alert("注册失败！");
+
+
+                        })
+                    }
+
+                });
+
+
+
+
 
     </script>
+</div>
 </body>
 </html>
