商品修改功能

--- a/src/main/web/user/addComm.html
+++ b/src/main/web/user/addComm.html
@@ -82,8 +82,10 @@
                     <div class="col-sm-10">
                         <div class="radio">
                             <label>
-                                <input type="radio" checked="" value="1" ng-model="c_state" id="optionsRadios1" name="optionsRadios">选项1</label>
-                                <label><input type="radio" value="2" id="optionsRadios2" name="optionsRadios" ng-model="c_state" >选项2</label>
+                                <input type="radio" checked="" value="1" ng-model="c_state" id="optionsRadios1" name="optionsRadios">上架</label>
+                                <label><input type="radio" value="2" id="optionsRadios2" name="optionsRadios" ng-model="c_state" >下架</label>
+                            <label><input type="radio" value="2" id="optionsRadios3" name="optionsRadios" ng-model="c_state" >缺货</label>
+                            <label><input type="radio" value="2" id="optionsRadios4" name="optionsRadios" ng-model="c_state" >已停售</label>
                         </div>
 
                     </div>
