--- a/src/main/web/user/updateComm.html
+++ b/src/main/web/user/updateComm.html
@@ -9,11 +9,8 @@
     <link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
     <link href="/css/animate.css" rel="stylesheet">
     <link href="/css/style.css?v=4.1.0" rel="stylesheet">
-
     <script src="../scripts/ajaxfileupload.js"></script>
-
     <script>
-
     </script>>
 </head>
 <body ng-app="myApp" ng-controller="CommodityController" >
@@ -21,7 +18,7 @@
     <div class="col-sm-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
-                <h5>添加商品 <small></small></h5>
+                <h5>修改商品 <small></small></h5>
                 <div class="ibox-tools">
                     <a class="collapse-link">
                         <i class="fa fa-chevron-up"></i>
@@ -41,43 +38,11 @@
                 </div>
             </div>
             <div class="ibox-content">
-
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">商品编号</label>
-
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="c_id">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">商品名称</label>
-
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="c_name">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">商品品牌</label>
-
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="brand">
-                    </div>
-                </div>
-
-                <form  action="/FileUpload/fileUpload_ajax" method="post" enctype="multipart/form-data">
-                    <label class="col-sm-2 control-label">商品图片</label>
-                    <input type="file" name="file"   ng-model="picture" /> <input type="submit"  value="Submit" />
-                    <span id="sp_AjaxFile"></span>
-
-                </form>
-
-
                 <div class="form-group">
                     <label class="col-sm-2 control-label">正常价格</label>
 
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="normal_price">
+                        <input type="text" class="form-control" id="price" ng-model="normal_price">
                     </div>
                 </div>
 
@@ -85,81 +50,21 @@
                     <label class="col-sm-2 control-label">零售价格</label>
 
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="retail_price">
+                        <input type="text" class="form-control" ng-model="retail_price" id="retail_price">
                     </div>
                 </div>
-
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">商品状态
-                    </label>
-                    <div class="col-sm-10">
-                        <div class="radio">
-                            <label>
-                                <input type="radio" checked="" value="1" ng-model="c_state" id="optionsRadios1" name="optionsRadios">选项1</label>
-                            <input type="radio" value="2" id="optionsRadios2" name="optionsRadios" ng-model="c_state" >选项2</label>
-                        </div>
-
-                    </div>
-
-                    <div class="hr-line-dashed"></div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品介绍</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control"> <span class="help-block m-b-none" ng-model="introduce"></span>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品属性</label>
-
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="property">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品标签</label>
-
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="label">
-                        </div>
-                    </div>
 
                     <div class="form-group">
                         <label class="col-sm-2 control-label">商品库存</label>
 
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="inventory">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品大类</label>
-
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="broad_heading">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品子类别</label>
-
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="subclass">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">商品创建时间</label>
-
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="cdate">
+                            <input type="text" class="form-control" ng-model="inventory" id="inventory">
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <button class="btn btn-primary" type="submit" ng-click="submitFrom()">保存内容</button>
+                            <button class="btn btn-primary" type="submit" ng-click="edit()">保存内容</button>
                             <button class="btn btn-white" type="submit">取消</button>
                         </div>
                     </div>
@@ -172,18 +77,42 @@
 
  <script src="../js/angular/angular.min.js" type="text/javascript"></script>
  <script>
-
+     function getrequest() {
+         var url = location.search;
+         var theRequest = new Object();
+         if (url.indexOf("?") != -1) {
+             var str = url.substr(1);
+             strs = str.split("&");
+             for (var i = 0; i < strs.length; i++) {
+                 theRequest[strs[i].split("=")[0]] = unescape(strs[i].split("=")[1])
+             }
+         }
+         return theRequest;
+     }
      var app = angular.module('myApp', []);
      app.controller('CommodityController', function($scope,$http) {
-         $http.get("/comm/findById").success(function (id) {
-             $scope.comms =data;
-         });
+         $scope.edit = function () {
+
+             var normal_price = $("#price").val();
+             var retail_price = $("#retail_price").val();
+             var inventory = $("#inventory").val();
+             var c_id = getrequest().id;
+             $http({
+                 method: 'POST',
+                 url:'/comm/update?c_id='+c_id+'&normal_price='+normal_price+'&retail_price'+retail_price+'&inventory='+inventory,
+                // url: '/comm/update?c_id='+c_id+'&Commodity_id='+Commodity_id+'&c_name='+c_name,
 
 
+             }).success(function () {
+                 alert("修改成功！");
+                 window.location = "datagridComm.html"
+             }).error(function(){
+                 alert("修改成功");
+                 window.location = "datagridComm.html"
+             })
 
-
-     })
-
+         };
+     });
  </script>
 </body>
 </html>
