--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -31,12 +31,12 @@
                 <span>|</span>
                 <a class="head_nav_a" href="register.html">注册</a>
             </div>
-            <div id="head_car">
+         <!--   <div id="head_car">
                 <a href="g.html" class="head_car_text">购物车（0）</a>
                 <div id="car_content" style="height: 0px;width:0px ;background-color: #edffc6;z-index: 999">
                     <a class="car_text"></a>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
@@ -551,8 +551,6 @@
                         <a href="kon.html"><img src="img/u=170626932,151332030&fm=23&gp=0.jpg"></a>
                         <a href="kon.html">百雀羚套装</a></li>
                 </ul>
-
-
             </div>
         </li>
         <li>
@@ -803,7 +801,7 @@
                 var params={ 'money':money,"id":id ,"cname":cname};
                 $http({
                     method:'POST',
-                    url:'/comm/findById?id='+id+"&money="+money+"&cname"+cname,
+                    url:'/comm/findById?id='+id+"&money="+money+"&cname="+cname,
                     data:params,
                     dataType:'text',
                 }).success(function(data, status, headers, config){
