--- a/src/main/web/Acer.html
+++ b/src/main/web/Acer.html
@@ -14,7 +14,7 @@
 
 <body ng-app="myAppXQ" ng-controller="CommodityCo">
 <div class="navtitleright nb">
-	<a href="index.html">首页</a> &gt;
+	<a href="index.jsp">首页</a> &gt;
 	<a href="#">电脑</a> &gt;
 </div>
 <div class="indbody pro-style">
