--- a/src/main/web/g.html
+++ b/src/main/web/g.html
@@ -21,7 +21,7 @@
 				<div class="blank"></div>
 				<div id="ur_here">
 					当前位置:
-					<a href="index.html">首页</a> <code>&gt;</code> 购物车
+					<a href="index.jsp">首页</a> <code>&gt;</code> 购物车
 				</div>
 			</div>
 			<div class="blank"></div>
@@ -61,7 +61,7 @@
 						<tbody>
 							<tr>
 								<td bgcolor="#ffffff">
-									<a href="index.html"><img src="img/continue.gif" alt="continue"></a>
+									<a href="index.jsp"><img src="img/continue.gif" alt="continue"></a>
 								</td>
 								<td bgcolor="#ffffff" align="right">
 									<a href="pay.jsp"><img  src="img/checkout.gif" alt="checkout"></a>
