--- a/src/main/web/Acer1.html
+++ b/src/main/web/Acer1.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 	<div class="navtitleright nb">
-			<a href="index.html">首页</a> &gt;
+			<a href="index.jsp">首页</a> &gt;
 			<a href="#">电脑</a> &gt;
 		</div>
 		<div class="indbody pro-style">
