--- a/src/main/web/HP.html
+++ b/src/main/web/HP.html
@@ -19,7 +19,7 @@
 
 
 <div class="navtitleright nb">
-    <a href="index.html">首页</a> &gt;
+    <a href="index.jsp">首页</a> &gt;
     <a href="#">电脑</a> &gt;
 
 </div>
