--- a/src/main/web/Y2.html
+++ b/src/main/web/Y2.html
@@ -17,7 +17,7 @@
 	<body>
 
 		<div class="navtitleright nb">
-			<a href="index.html">首页</a> &gt;
+			<a href="index.jsp">首页</a> &gt;
 			<a href="#">服装</a>
 
 		</div>
