--- a/src/main/web/kon.html
+++ b/src/main/web/kon.html
@@ -21,7 +21,7 @@
             <span>|</span>
             <a class="head_nav_a">收藏本店</a>
             <span>|</span>
-             <a href="index.html">首页</a>
+             <a href="index.jsp">首页</a>
         </div>
         <div id="head_right">
             <div id="head_landing">
