--- a/src/main/web/login.html
+++ b/src/main/web/login.html
@@ -165,7 +165,7 @@
                     }else {
                         alert("登录成功！");
 
-                        window.location = "index.html"
+                        window.location = "index.jsp"
                     }
                 }).error(function (data, status, headers, config) {
                     alert("登录失败!");
