--- a/src/main/web/n.html
+++ b/src/main/web/n.html
@@ -19,7 +19,7 @@
 
 
 		<div class="navtitleright nb">
-			<a href="index.html">首页</a> &gt;
+			<a href="index.jsp">首页</a> &gt;
 			<a href="#">服装</a>
 
 		</div>
