--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -707,6 +707,7 @@
                 <a><img src="{{value.picture}}"></a>
                 <a>{{value.c_name}}</a>
                 <a>{{value.label}}</a>
+                
             </li>
 
         </ul>
@@ -725,7 +726,7 @@
                 <a   class="floor_goods_img"><img src="{{value.picture}}"></a>
                 <a class="floor_goods_tit">{{value.c_name}}</a>
                 <a class="floor_goods_txt">{{value.label}}</a>
-                <a class="floor_goods_price">立即购买</a>
+                <a class="floor_goods_price">{{value.retail_price}}</a>
             </li>
             <div style="clear:both;"></div>
         </ul>
