--- a/src/main/web/P.html
+++ b/src/main/web/P.html
@@ -90,9 +90,9 @@
 							<div class="tempWrap" style="overflow:hidden; position:relative; height:420px">
 								<ul style="top: 0px; position: relative; padding: 0px; margin: 0px;">
 									<li style="height: 200px;">
-										<a href="Acer1.html" target="_blank"><img src="img/ACRE.jpg" alt=""></a>
+										<a href="n3.html" target="_blank"><img src="img/ni3.jpg" alt=""></a>
 										<p>
-											<a href="#" target="_blank">Acer/宏碁 F5 572G坚刃版 六代i5 GT940M超薄学生笔记本15.6英寸</a><span>￥5099.00</span></p>
+											<a href="#" target="_blank">2017年春季新款圆领短袖男士白色T恤</a><span>￥139</span></p>
 									</li>
 									<li style="height: 200px;">
 										<a href="P4.html" target="_blank">苹果ipad平板电脑经典款式<img src="img/pai4.jpg" alt=""></a>
