--- a/src/main/web/n.html
+++ b/src/main/web/n.html
@@ -92,9 +92,9 @@
 							<div class="tempWrap" style="overflow:hidden; position:relative; height:420px">
 								<ul style="top: 0px; position: relative; padding: 0px; margin: 0px;">
 									<li style="height: 200px;">
-										<a href="n3.html" target="_blank"><img src="img/ni3.jpg" alt=""></a>
+										<a href="P4.html" target="_blank">苹果ipad平板电脑经典款式<img src="img/pai4.jpg" alt=""></a>
 										<p>
-											<a href="#" target="_blank">2017年春季新款圆领短袖男士白色T恤</a><span>￥139</span></p>
+											<a href="#" target="_blank"></a><span>￥4099.00</span></p>
 									</li>
 									<li style="height: 200px;">
 										<a href="Y3.html" target="_blank"><img src="img/yi3.jpg" alt=""></a>
