--- a/src/main/web/login.html
+++ b/src/main/web/login.html
@@ -163,7 +163,7 @@
                         alert("登录失败！");
                         window.location="login.html"
                     }else {
-                        alert("登录成功！");
+                     /*   alert("登录成功！");*/
                         window.location="index.jsp?username="+username;
                     }
                 }).error(function (data, status, headers, config) {
