--- a/src/main/web/register.html
+++ b/src/main/web/register.html
@@ -185,7 +185,7 @@
                   if(data=='ERROR'){
                       alert("注册失败！")
                   }else {
-                      alert("注册成功！")
+               /*       alert("注册成功！")*/
                       window.location = "login.html";
                   }
               }).error(function (data,status,headers,config) {
